Cache Relative wrong path issue on Copy-Paste objects #37471

Closed
opened 2013-11-15 13:28:04 +01:00 by Daniel Martinez Lara · 6 comments

{F27532}System Information

Ubuntu
Versión 12.04 (precise) de 64-bit
Núcleo Linux 3.8.0-33-generic
GNOME 3.4.2
Mermory: 7,8 GiB
Processor: Intel® Core™ i7-3770 CPU @ 3.40GHz × 8

renderer: 'GeForce GTX 650 Ti/PCIe/SSE2'
vendor: 'NVIDIA Corporation'
version: '4.2.0 NVIDIA 304.88'

Blender Version

version 2.69 (sub 2), revision b'61181'. b'Release'
build date: b'2013-11-07', b'02:02:33'
platform: b'Linux:64bit'

Short description of error

After coping an object having a Mesh_Cache modifier, the message of "Copy to z-buffer" shows, when you paste the object to other scene or file the path into the Mesh_Modifier changes adding some "../" at the beggining of the original file, making the object lost the Cache.

I had include a Zip file whith a screencapture and the files used to reproduce the issue.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  • Create a new blend file
  • Animate an object
  • Select the object
  • Export animation as MDD
  • Create other new file with the same (new) object than previous file
  • Add the mesh_cache modifier and link to the exported cache
  • Save the file, just to be sure all will be at the same path
  • Create a new empty Blend file and save it
  • Copy the object with the mesh_cache modifier from the previous saved file to the empty file
  • Go to modifier section of the object and you will find it losses the correct path to the cache, although the directory structure is at the same levels

Best regards

{[F27532](https://archive.blender.org/developer/F27532/blender_cache_test.zip)}**System Information** Ubuntu Versión 12.04 (precise) de 64-bit Núcleo Linux 3.8.0-33-generic GNOME 3.4.2 Mermory: 7,8 GiB Processor: Intel® Core™ i7-3770 CPU @ 3.40GHz × 8 renderer: 'GeForce GTX 650 Ti/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.2.0 NVIDIA 304.88' **Blender Version** version 2.69 (sub 2), revision b'61181'. b'Release' build date: b'2013-11-07', b'02:02:33' platform: b'Linux:64bit' **Short description of error** After coping an object having a Mesh_Cache modifier, the message of "Copy to z-buffer" shows, when you paste the object to other scene or file the path into the Mesh_Modifier changes adding some "../" at the beggining of the original file, making the object lost the Cache. I had include a Zip file whith a screencapture and the files used to reproduce the issue. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps - Create a new blend file - Animate an object - Select the object - Export animation as MDD - Create other new file with the same (new) object than previous file - Add the mesh_cache modifier and link to the exported cache - Save the file, just to be sure all will be at the same path - Create a new empty Blend file and save it - Copy the object with the mesh_cache modifier from the previous saved file to the empty file - Go to modifier section of the object and you will find it losses the correct path to the cache, although the directory structure is at the same levels Best regards
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @pepe-school-land

Added subscriber: @pepe-school-land

This issue was referenced by blender/blender-addons-contrib@d4284056c7

This issue was referenced by blender/blender-addons-contrib@d4284056c7b3d512ba3e54bee16c83530c63e2bb

This issue was referenced by d4284056c7

This issue was referenced by d4284056c7b3d512ba3e54bee16c83530c63e2bb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d4284056c7.

Closed by commit d4284056c7.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37471
No description provided.