Fix T37471: Copy/Paste objects broke relative paths